<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.negar.myapplication.AddInfoActivity"
    android:id="@+id/main_layout"
    android:background="@android:color/background_light"
    android:baselineAligned="true"
    android:clickable="true"
    android:padding="10dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="0.75">

        <TextView android:text="@string/hello_world" android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/date_time_textview"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:gravity="center"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:layout_margin="2dp"
            android:editable="true"
            android:layout_weight="0.2" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:id="@+id/submit_button"
            android:layout_weight="0.8"
            android:background="@drawable/rounded_button"
            android:layout_margin="2dp"
            android:layout_gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.55"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:gravity="center">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/mood_imageview"
            android:layout_centerHorizontal="true"
            android:layout_weight="0.6"
            android:padding="5dp"
            android:layout_marginLeft="10dp" />
        <NumberPicker
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/numberPicker_vaue"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.9"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp" />

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/sub_mood_layout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.5"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="2dp"
            android:layout_marginLeft="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/what_mood"
                android:id="@+id/sub_mood_ask"
                android:gravity="center"
                android:layout_weight="0.2"
                android:textStyle="bold" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/imageButton"
                android:layout_weight="0.2"
                android:background="@android:color/background_light" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/imageButton2"
                android:layout_weight="0.2"
                android:background="@android:color/background_light" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/imageButton3"
                android:layout_weight="0.2"
                android:background="@android:color/background_light" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/other_button"
                android:text="@string/other"
                android:background="@drawable/rounded_button"
                android:layout_weight="0.2" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/memory_layout"
        android:layout_weight="0.35">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.6"
            android:gravity="center">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/defualtView"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.15"
                android:layout_margin="2dp"
                android:src="@drawable/defff" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/upload"
                android:id="@+id/upload_button"
                android:background="@drawable/rounded_button"
                android:layout_weight="0.85"
                android:layout_marginBottom="10dp" />
        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Medium Text"
            android:id="@+id/description_text"
            android:layout_weight="0.4"
            android:layout_margin="2dp"
            android:gravity="top"
            android:focusable="true"
            android:background="@drawable/item_selector"
            android:padding="10dp" />

    </LinearLayout>


</LinearLayout>
